# Rinshan

./: .gitignore  README.md  pyproject.toml
configs/: grp.yaml  oracle_base.yaml  stage1_base.yaml  stage1_large.yaml  stage1_nano.yaml  stage1_pro6000.yaml  stage2_base.yaml  stage2_base_belief_finetune.yaml  stage2_large.yaml  stage2_nano.yaml  stage3_base.yaml  stage3_large.yaml  stage3_nano.yaml  stage3_nano_stable.yaml  stage4_base.yaml  stage4_large.yaml  stage4_nano.yaml  stage4_self_play.yaml
docs/: server_setup.md
libriichi/: Cargo.toml  pyproject.toml
libriichi/src/: lib.rs
rinshan/: __init__.py  constants.py  tile.py
rinshan/algo/: __init__.py  shanten.py
rinshan/data/: __init__.py  annotation.py  dataset.py  encoder.py  mjlog_parser.py
rinshan/engine/: __init__.py  action.py  game_board.py  hora_calc.py  simulator.py  state.py
rinshan/model/: __init__.py  aux_head.py  belief.py  full_model.py  grp.py  qv_head.py  transformer.py
rinshan/self_play/: __init__.py  agent.py  arena.py  league.py  libriichi_agent.py  online_buffer.py
scripts/: analyze_grp_rewards.py  bench_arena.py  calibrate_aux_weights.py  convert_grp_rewards_to_v2.py  diagnose_oracle.py  eval_bc_accuracy.py  eval_belief_accuracy.py  export_mjson.py  fill_grp_rewards.py  fix_mjai_tsumogiri.py  inspect_checkpoint.py  inspect_log.py  migrate_stage1_weights.py  migrate_to_v3.py  migrate_vocab_tsumogiri.py  parse_tenhou.py  run_self_play.py  run_stage4_selfplay_bench.py  run_versus.py  train_grp.py  train_oracle.py  train_stage1.py  train_stage2.py  train_stage3.py  train_stage4.py
(+20 files in other folders)
